test/core/custom-descriptors/br_on_cast_desc_fail.wast
;; Validation

(module
  (rec
    (type $a (sub (descriptor $b) (struct)))
    (type $b (sub (describes $a) (struct)))
    (type $c (sub $a (descriptor $d) (struct)))
    (type $d (sub $b (describes $c) (struct)))
  )

  ;; All nullness combinations
  (func (param (ref null any) (ref null $b)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref null $b)) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref null any) (ref $b)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref $b)) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref any) (ref null $b)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref any) (ref null $b)) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref any) (ref $b)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref any) (ref $b)) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )

  ;; All nullness combinations with subtype descriptor
  (func (param (ref null any) (ref null $d)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref null $d)) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref null any) (ref $d)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref $d)) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref any) (ref null $d)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref any) (ref null $d)) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref any) (ref $d)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref any) (ref $d)) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )

  ;; All nullness combinations with exact subtype descriptor
  (func (param (ref null any) (ref null (exact $d))) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref null (exact $d))) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref null any) (ref (exact $d))) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref (exact $d))) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref any) (ref null (exact $d))) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref any) (ref null (exact $d))) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref any) (ref (exact $d))) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref any) (ref (exact $d))) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )

  ;; All nullness combinations with exact casts.
  (func (param (ref null any) (ref null (exact $b))) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref null (exact $b))) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref null any) (ref (exact $b))) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref (exact $b))) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref any) (ref null (exact $b))) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref any) (ref null (exact $b))) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
  )
  (func (param (ref any) (ref (exact $b))) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref any) (ref (exact $b))) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
  )

  ;; Unreachable descriptor
  (func (param (ref null any)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 0)
        (unreachable)
      )
    )
    (unreachable)
  )
  (func (param (ref null any)) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref $a)
        (local.get 0)
        (unreachable)
      )
    )
  )
  (func (param (ref any)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null $a)
        (local.get 0)
        (unreachable)
      )
    )
    (unreachable)
  )
  (func (param (ref any)) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref $a)
        (local.get 0)
        (unreachable)
      )
    )
  )
  (func (param (ref null any)) (result (ref any))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null any) (ref null (exact $a))
        (local.get 0)
        (unreachable)
      )
    )
    (unreachable)
  )
  (func (param (ref null any)) (result (ref null any))
    (block (result (ref (exact $a)))
      (br_on_cast_desc_fail 1 (ref null any) (ref (exact $a))
        (local.get 0)
        (unreachable)
      )
    )
  )
  (func (param (ref any)) (result (ref any))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref any) (ref null (exact $a))
        (local.get 0)
        (unreachable)
      )
    )
    (unreachable)
  )
  (func (param (ref any)) (result (ref any))
    (block (result (ref (exact $a)))
      (br_on_cast_desc_fail 1 (ref any) (ref (exact $a))
        (local.get 0)
        (unreachable)
      )
    )
  )

  ;; Null descriptor
  (func (param (ref null any)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 0)
        (ref.null none)
      )
    )
    (unreachable)
  )
  (func (param (ref null any)) (result (ref null any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref $a)
        (local.get 0)
        (ref.null none)
      )
    )
  )
  (func (param (ref any)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref any) (ref null $a)
        (local.get 0)
        (ref.null none)
      )
    )
    (unreachable)
  )
  (func (param (ref any)) (result (ref any))
    (block (result (ref $a))
      (br_on_cast_desc_fail 1 (ref any) (ref $a)
        (local.get 0)
        (ref.null none)
      )
    )
  )
  (func (param (ref null any)) (result (ref any))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null any) (ref null (exact $a))
        (local.get 0)
        (ref.null none)
      )
    )
    (unreachable)
  )
  (func (param (ref null any)) (result (ref null any))
    (block (result (ref (exact $a)))
      (br_on_cast_desc_fail 1 (ref null any) (ref (exact $a))
        (local.get 0)
        (ref.null none)
      )
    )
  )
  (func (param (ref any)) (result (ref any))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref any) (ref null (exact $a))
        (local.get 0)
        (ref.null none)
      )
    )
    (unreachable)
  )
  (func (param (ref any)) (result (ref any))
    (block (result (ref (exact $a)))
      (br_on_cast_desc_fail 1 (ref any) (ref (exact $a))
        (local.get 0)
        (ref.null none)
      )
    )
  )
)

(module
  (rec
    (type $a (sub (descriptor $b) (struct)))
    (type $b (sub (describes $a) (struct)))
    (type $c (sub $a (descriptor $d) (struct)))
    (type $d (sub $b (describes $c) (descriptor $e) (struct)))
    (type $e (describes $d) (struct))
  )

  ;; Cast to self
  (func (param (ref null $a) (ref null $b)) (result (ref $a))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null $a) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null $a) (ref null (exact $b))) (result (ref $a))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null $a) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Cast to unrelated type
  (func (param (ref null i31) (ref null $b)) (result (ref i31))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null i31) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null i31) (ref null (exact $b))) (result (ref i31))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null i31) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Cast from defined type to unrelated type
  (func (param (ref null $e) (ref null $b)) (result (ref $e))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null $e) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null $e) (ref null (exact $b))) (result (ref $e))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null $e) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Cast from exact defined type to unrelated type
  (func (param (ref null (exact $e)) (ref null $b)) (result (ref (exact $e)))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null (exact $e)) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null (exact $e)) (ref null (exact $b))) (result (ref (exact $e)))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null (exact $e)) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Cast to supertype
  (func (param (ref null $c) (ref null $b)) (result (ref $c))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null $c) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null $c) (ref null (exact $b))) (result (ref $c))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null $c) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Cast from exact to supertype
  (func (param (ref null (exact $c)) (ref null $b)) (result (ref $c))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null (exact $c)) (ref null $a)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null (exact $c)) (ref null (exact $b))) (result (ref $c))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null (exact $c)) (ref null (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Cast to subtype
  (func (param (ref null $a) (ref null $d)) (result (ref $a))
    (block (result (ref null $c))
      (br_on_cast_desc_fail 1 (ref null $a) (ref null $c)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null $a) (ref null (exact $d))) (result (ref $a))
    (block (result (ref null (exact $c)))
      (br_on_cast_desc_fail 1 (ref null $a) (ref null (exact $c))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Cast from exact to subtype
  (func (param (ref null (exact $a)) (ref null $d)) (result (ref (exact $a)))
    (block (result (ref null $c))
      (br_on_cast_desc_fail 1 (ref null (exact $a)) (ref null $c)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null (exact $a)) (ref null (exact $d))) (result (ref (exact $a)))
    (block (result (ref null (exact $c)))
      (br_on_cast_desc_fail 1 (ref null (exact $a)) (ref null (exact $c))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Cast from null
  (func (param (ref null $b)) (result (ref $a))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null none) (ref null $a)
        (ref.null none)
        (local.get 0)
      )
    )
    (unreachable)
  )
  (func (param (ref null (exact $b))) (result (ref $a))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null none) (ref null (exact $a))
        (ref.null none)
        (local.get 0)
      )
    )
    (unreachable)
  )

  ;; Cast from unreachable
  (func (param (ref null $b)) (result (ref any))
    (block (result (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (unreachable)
        (local.get 0)
      )
    )
    (unreachable)
  )
  (func (param (ref null (exact $b))) (result (ref any))
    (block (result (ref null (exact $a)))
      (br_on_cast_desc_fail 1 (ref null any) (ref null (exact $a))
        (unreachable)
        (local.get 0)
      )
    )
    (unreachable)
  )

  ;; Cast to descriptor type
  (func (param (ref null any) (ref null $e)) (result (ref any))
    (block (result (ref null $d))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $d)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
  (func (param (ref null any) (ref null (exact $e))) (result (ref any))
    (block (result (ref null (exact $d)))
      (br_on_cast_desc_fail 1 (ref null any) (ref null (exact $d))
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
)

(assert_invalid
  (module
    ;; Type must exist.
    (func (result anyref)
      (br_on_cast_desc_fail 0 anyref (ref 1)
        (unreachable)
      )
    )
  )
  "unknown type"
)

(assert_invalid
  (module
    ;; Type must have a descriptor.
    (func (result anyref)
      (br_on_cast_desc_fail 0 anyref anyref
        (unreachable)
      )
    )
  )
  "type any does not have a descriptor"
)

(assert_invalid
  (module
    ;; Type must have a descriptor.
    (func (result anyref)
      (br_on_cast_desc_fail 0 anyref nullref
        (unreachable)
      )
    )
  )
  "type none does not have a descriptor"
)

(assert_invalid
  (module
    (type $a (struct))
    ;; Type must have a descriptor.
    (func (result anyref)
      (br_on_cast_desc_fail 0 anyref (ref $a)
        (unreachable)
      )
    )
  )
  "type 0 does not have a descriptor"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Cannot cast to descriptor without its own descriptor.
    (func (result anyref)
      (br_on_cast_desc_fail 0 anyref (ref $b) (unreachable))
    )
  )
  "type 1 does not have a descriptor"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Descriptor must have expected type.
    (func (param (ref null any) (ref null struct)) (result (ref null any))
      (br_on_cast_desc_fail 0 (ref null any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Descriptor must be exact when cast is exact.
    (func (param (ref null any) (ref $b)) (result (ref null any))
      (br_on_cast_desc_fail 0 (ref null any) (ref (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Descriptor must be exact when cast is exact, even if the descriptor is null.
    (func (param (ref null any)) (result (ref null any))
      (br_on_cast_desc_fail 0 (ref null any) (ref (exact $a))
        (local.get 0)
        (ref.null $b)
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (sub (descriptor $b) (struct)))
      (type $b (sub (describes $a) (struct)))
      (type $c (sub $a (descriptor $d) (struct)))
      (type $d (sub $b (describes $c) (struct)))
    )
    ;; An exact reference to a subtype of the descriptor does not cut it.
    (func (param (ref null any) (ref (exact $d))) (result (ref null any))
      (br_on_cast_desc_fail 0 (ref null any) (ref (exact $a))
        (local.get 0)
        (local.get 1)
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Cannot cast across hierarchies.
    (func (param (ref null func) (ref $b)) (result (ref null any))
      (br_on_cast_desc_fail 0 (ref null func) (ref $a)
        (local.get 0)
        (local.get 1)
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Cannot cast across hierarchies even with unreachable input.
    (func (result (ref null any))
      (br_on_cast_desc_fail 0 (ref null func) (ref $a)
        (unreachable)
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (sub (descriptor $b) (struct)))
      (type $b (sub (describes $a) (struct)))
      (type $c (sub $a (descriptor $d) (struct)))
      (type $d (sub $b (describes $c) (struct)))
    )
    ;; Ouput type is determined by immediate, not actual input.
    (func (param (ref $c) (ref $d)) (result (ref null any))
      (block (result (ref null $c))
        (br_on_cast_desc_fail 1 (ref $c) (ref $a)
          (local.get 0)
          (local.get 1)
        )
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (sub (descriptor $b) (struct)))
      (type $b (sub (describes $a) (struct)))
      (type $c (sub $a (descriptor $d) (struct)))
      (type $d (sub $b (describes $c) (struct)))
    )
    ;; Same, but with an exact reference to the descriptor subtype.
    (func (param (ref $c) (ref (exact $d))) (result (ref null any))
      (block (result (ref null $c))
        (br_on_cast_desc_fail 1 (ref $c) (ref $a)
          (local.get 0)
          (local.get 1)
        )
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (sub (descriptor $b) (struct)))
      (type $b (sub (describes $a) (struct)))
      (type $c (sub $a (descriptor $d) (struct)))
      (type $d (sub $b (describes $c) (struct)))
    )
    ;; Same, but now the cast value and descriptor are both null.
    (func (result (ref null any))
      (block (result (ref null $c))
        (br_on_cast_desc_fail 1 (ref null none) (ref $a)
          (ref.null none)
          (ref.null none)
        )
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (sub (descriptor $b) (struct)))
      (type $b (sub (describes $a) (struct)))
      (type $c (sub $a (descriptor $d) (struct)))
      (type $d (sub $b (describes $c) (struct)))
    )
    ;; Same, but now the cast value and descriptor are bottom.
    (func (result (ref null any))
      (block (result (ref null $c))
        (br_on_cast_desc_fail 1 (ref none) (ref $a)
          (unreachable)
        )
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Branch type should be nullable.
    (func (param (ref null any) (ref null $b)) (result (ref any))
      (block (result (ref $a))
        (br_on_cast_desc_fail 1 (ref null any) (ref $a)
          (local.get 0)
          (local.get 1)
        )
      )
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Invalid in constant expression.
    (global (ref $a) (br_on_cast_desc_fail 0 (ref null any) (ref null $a) (ref.null none) (ref.null none)))
  )
  "constant expression required"
)

;; Sent values

(module
  (rec
    (type $a (descriptor $b) (struct))
    (type $b (describes $a) (struct))
  )

  ;; One extra value.
  (func (param (ref null any) (ref null $b)) (result i32 (ref any))
    (block (result i32 (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (i32.const 42)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Two extra values.
  (func (param (ref null any) (ref null $b)) (result i32 i64 (ref any))
    (block (result i32 i64 (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (i32.const 42)
        (i64.const 1337)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )

  ;; Extra reference value.
  (func (param (ref null any) (ref null $b)) (result (ref null eq) (ref any))
    (block (result (ref null any) (ref null $a))
      (br_on_cast_desc_fail 1 (ref null any) (ref null $a)
        (local.get 1)
        (local.get 0)
        (local.get 1)
      )
    )
    (unreachable)
  )
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; No types at label.
    (func
      (br_on_cast_desc_fail 0 (ref null any) (ref $a)
        (unreachable)
      )
      (unreachable)
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Too many types at label.
    (func (param (ref null any) (ref null $b)) (result i32 (ref null any))
      (br_on_cast_desc_fail 0 (ref null any) (ref $a)
        (local.get 0)
        (local.get 1)
      )
      (unreachable)
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Mismatched types at label.
    (func (param (ref null any) (ref null $b)) (result (ref null eq) (ref null any))
      (br_on_cast_desc_fail 0 (ref null any) (ref $a)
        (local.get 0)
        (local.get 0)
        (local.get 1)
      )
      (unreachable)
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; No types at fallthrough.
    (func (result (ref null any))
      (block
        (br_on_cast_desc_fail 1 (ref null any) (ref $a)
          (unreachable)
        )
      )
      (unreachable)
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Too many types at fallthrough.
    (func (result (ref null any))
      (block (result i32 (ref $a))
        (br_on_cast_desc_fail 1 (ref null any) (ref $a)
          (ref.null none)
          (ref.null none)
        )
      )
      (unreachable)
    )
  )
  "type mismatch"
)

(assert_invalid
  (module
    (rec
      (type $a (descriptor $b) (struct))
      (type $b (describes $a) (struct))
    )
    ;; Label types do not match fallthrough types.
    (func (result (ref null any) (ref null any))
      (block (result (ref null eq) (ref $a))
        (br_on_cast_desc_fail 1 (ref null any) (ref $a)
          (unreachable)
        )
      )
      (unreachable)
    )
  )
  "type mismatch"
)

;; TODO: execution
